# patina

./: .gitignore  README.md  pyproject.toml
src/patina/: __init__.py  __main__.py  cli.py  effects.py  errors.py  image_io.py  interactive.py  overlays.py  presets.py  render.py  ui.py  video.py
tests/: conftest.py  test_cli.py  test_effects.py  test_image_io.py  test_overlays.py  test_presets.py  test_ui.py  test_video.py
